# PhysicsService

./: .devcontainer.json  .gitignore  DevDockerfile  Dockerfile  LICENSE  README.md
PhysicsService/: CMakeLists.txt  WebsocketServer.cpp  WebsocketServer.h  config.json  main.cpp
PhysicsService/protos/: motion_control.proto
robots/panda/: robot.urdf
robots/ur10e/: robot.urdf
robots/ur3/: robot.urdf
robots/ur5e/: robot.urdf
scripts/: install-pinocchio.sh
test-client/control/: control-test-client.py  generate_stub_file.sh  motion_control_pb2.py
test-client/frontend/: ws-test-client.py
